--- a/src/index.scss
+++ b/src/index.scss
@@ -462,7 +462,7 @@ header {
 }
 
 .adminPage {
-  background-color: rgb(235, 235, 235);
+  background-color: #fff;
   overflow: auto;
   width: 100vw;
   height: 100vh;
@@ -476,15 +476,36 @@ header {
 
   .btnWrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     
+    .btnAdding {
+      display: flex;
+    }
+
+    .btnControls {
+      margin: 15px 0;
+      max-width: 400px;
+      display: flex;
+      flex-wrap: wrap;
+
+      .adminBtnControls {
+        color: #101010;
+
+        &:hover {
+          color: #fff;
+        }
+      }
+    }
+
     .adminBtn {
-      padding: 10px 20px;
-      margin-left: 20px;
+      padding: 10px;
+      margin-right: 20px;
       border-radius: 5px;
       color: #fff;
       font-weight: 600;
       cursor: pointer;
+      background-color: #eaeaea;
       margin-top: 10px;
 
       &:first-child {
@@ -498,10 +519,18 @@ header {
 
     .acceptCompany {
       background-color: rgb(47, 190, 83);
+      width: 175px;
+      text-transform: uppercase;
+      padding: 15px;
+      text-align: center;
     }
 
     .dismissCompany {
       background-color: rgb(228, 72, 72);
+      width: 175px;
+      text-transform: uppercase;
+      padding: 15px;
+      text-align: center;
     }
   }
 }
@@ -657,4 +686,22 @@ header {
   max-width: 400px;
   max-height: 110px;
   overflow: hidden;
+}
+
+
+
+
+
+
+
+/// Scroll
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
