--- a/src/components/CardCompany/CardCompany.module.scss
+++ b/src/components/CardCompany/CardCompany.module.scss
@@ -168,6 +168,7 @@
 
     .workTimeToday {
         border-top: 0.5px solid #ddd;
+        border-bottom: 0.5px solid #ddd;
         padding: 15px 0;
         padding-left: 20px;
         font-size: 16px;
