--- a/src/components/CardCompany/CardCompany.module.scss
+++ b/src/components/CardCompany/CardCompany.module.scss
@@ -253,25 +253,35 @@
             color: #444;
         }
 
+        .comment {
+            border-bottom: 0.5px solid #C9C9C9;
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+
         .commentBlock {
             margin: 10px 0;
-            padding-left: 20px;
-            padding-bottom: 15px;
             border-bottom: 0.5px solid #C9C9C9;
 
             .commentAuthor {
+                padding-left: 20px;
+                margin-top: 10px;
                 font-size: 14px;
                 color: #444;
                 font-weight: 600;
             }
 
             .commentDate {
+                padding-left: 20px;
                 font-size: 12px;
                 color: rgb(143, 143, 143);
             }
 
-            .comment {
+            .commentText {
+                padding-left: 20px;
                 margin-top: 15px;
+                margin-bottom: 15px;
             }
         }
 
@@ -280,7 +290,9 @@
             width: 100%;
             background-color: #2F75FB;
             border-radius: 5px;
-            padding: 10px 0;
+            border-top-left-radius: 0px;
+            border-top-right-radius: 0px;
+            padding: 15px 0;
             color: #fff;
             cursor: pointer;
             text-align: center;
