--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,7 +10,7 @@
     border-radius: 10px;
     max-width: 380px;
     padding: 20px;
-    max-height: 580px;
+    max-height: 600px;
     overflow: hidden;
     margin-right: 10px;
 }
@@ -74,6 +74,8 @@
         align-items: center;
 
         .locateBtn {
+            cursor: pointer;
+            user-select: none;
             background-color: #f5f5f5;
             width: 100%;
             text-align: center;
@@ -110,7 +112,7 @@
         padding: 20px;
         margin-top: 20px;
         overflow-y: scroll;
-        max-height: 185px;
+        max-height: 165px;
     }
 
 }
