feat: rework card places

--- a/src/components/CardCompany/CardCompany.module.scss
+++ b/src/components/CardCompany/CardCompany.module.scss
@@ -203,6 +203,11 @@
             background-color: #2F75FB;
             color: #fff;
         }
+
+        .tableDayWeekend { 
+            background-color: #ff5151;
+            color: #fff;
+        }
     }
 
     .coffeeTime {
