--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,7 +10,8 @@
     border-radius: 10px;
     max-width: 380px;
     padding: 20px;
-    max-height: 600px;
+    // max-height: 600px;
+    height: 100%;
     overflow: hidden;
     margin-right: 10px;
 }
@@ -67,6 +68,7 @@
 
 .aboutPlace {
     margin-top: 20px;
+    height: 52%;
 
     .locate {
         display: flex;
@@ -112,7 +114,8 @@
         padding: 20px;
         margin-top: 20px;
         overflow-y: scroll;
-        max-height: 165px;
+        // max-height: 165px;
+        height: 85%;
     }
 
 }
