--- a/src/components/CardCompany/CardCompany.module.scss
+++ b/src/components/CardCompany/CardCompany.module.scss
@@ -10,7 +10,8 @@
     background: rgb(255, 255, 255);
     border-radius: 10px;
     max-width: 400px;
-    max-height: 580px;
+    // max-height: 580px;
+    height: 100%;
     margin-right: 10px;
 
     .companyTitle {
