--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -62,6 +62,11 @@
                     transition: all 0.2s;
                 }
             }
+
+            .selectedCity {
+                color: #1267e7;
+                font-weight: 500;
+            }
         }
 
         .cityEmpty {
