--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -8,6 +8,7 @@
     user-select: none;
 
     .selectionTitle {
+        text-transform: capitalize;
         background-color: #fff;
         box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.12);
         border-radius: 5px;
